<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailInfoUser">
    <ImageView
        android:contentDescription="@string/imageUser"
        android:layout_gravity="center"
        android:id="@+id/ivAvatarka"
        android:adjustViewBounds="true"
        tools:src="@tools:sample/avatars"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <TextView
        android:id="@+id/tvNameDetail"
        tools:text="test"
        android:text="@string/Full_name"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvgender"
        tools:text="test"
        android:text="@string/Gender"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvphone"
        tools:text="test"
        android:text="@string/phone"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvemail"
        tools:text="test"
        android:text="@string/Email"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvDob"
        tools:text="test"
        android:text="@string/Dob"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvage"
        tools:text="test"
        android:text="@string/Age"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvCountry"
        tools:text="test"
        android:text="@string/country"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvCity"
        tools:text="test"
        android:text="@string/City"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvStreet"
        tools:text="test"
        android:text="@string/Street"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPostal"
        tools:text="test"
        android:text="@string/postal"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>